--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,8 +57,8 @@ nav ul{
   list-style: none;
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  align-items: center;
+  gap: 3px;
+  align-items: center;  
 }
 
 .menu a{
@@ -69,6 +69,7 @@ nav ul{
   border-radius: 20px;
   font-size: 18px;
   transition: 0.3s;
+  box-shadow: 0px 5px 14px #103523;
 }
 
 .menu a:hover {
@@ -77,12 +78,9 @@ nav ul{
 }
 
 .frasediw img{
-  width: 100%;
-  height: auto;
-  max-height: 150px;
-  object-fit: cover;
-  margin-top: 10px;
+   width: 100%; 
 }
+
 
 /*## CONTENIDO PRINCIPAL ##*/
 main{
@@ -90,8 +88,58 @@ main{
   flex-direction: column; 
 }
 
-section{
-  line-height: 1.8;
+
+.socios{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  justify-content: center;
+  padding: 10px;
+}
+
+main .ventajas{
+  font-size: 50px;
+  text-shadow: 0px 0px 20px yellow;
+}
+
+.caja{
+  display: flex;
+  flex-direction: column;
+  background-color: #c3ecd9;
+  color:#103523;
+  padding: 50px;
+  max-width: 270px;
+  padding-bottom: 50px;
+  border-radius: 20px;
+  box-shadow: 0px 5px 14px #103523;
+  text-align: center;
+}
+
+.caja h3{
+  font-size: 30px;
+  margin-bottom: 5px;
+}
+
+.caja p{
+  margin-bottom: 20px;
+}
+
+.caja .btn{
+  display: inline-flex;
+  background-color: yellow;
+  color: black;
+  margin-top: auto;
+  padding: 15px;
+  border-radius: 10px;
+  font-weight: bold;
+  text-decoration: none;
+  transition: 0.3s;
+  text-align: center;
+}
+
+.caja .btn:hover {
+  background: #0c4904;
+  color:white;
 }
 
 section article{
@@ -124,13 +172,16 @@ section h2{
   color: #22744C;
   display: inline-block;
   transition: 0.3s;
+  border-radius: 50px;
+  padding:20px;
+  box-shadow: 0px 5px 14px #103523;
 }
 
 .menu2 a:hover {
   background-color: #103523;
   color: rgb(64, 184, 17);
-  border-radius: 20px;
-  padding: 5px 10px;
+  border-radius: 50px;
+  padding: 20px;
 }
 
 /*## FOOTER ##*/
