--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,7 @@
     padding: 0;
     box-sizing: border-box;    
     color:#22744C; 
-    font-family: Lilita One;
-    box-sizing: border-box;
+    font-family: Lilita One;    
 }
 
 img:not([alt]) {
@@ -47,6 +46,8 @@ a[href$=".pdf"]::after {
 
 /*## CABECERA INFERIOR ##*/
 .cabecera-inferior nav{
+  display: flex;
+  flex-direction: column;
   background-color: #c3ecd9;
   text-align: center;
   padding: 15px;
@@ -65,9 +66,10 @@ nav ul{
 .menu{
   list-style: none;
   display: flex;
-  flex-direction: column;
-  gap: 3px;
-  align-items: center;  
+  flex-direction: row;
+  gap: 30px;
+  justify-content: center;
+  margin:15px
 }
 
 .menu a{
@@ -166,11 +168,12 @@ section h2{
   margin-bottom: 10px;
 }
 
+
 .menu2 {
-  background-color: #c3ecd9;
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
   text-align: center;
-  padding: 15px;
-  margin-top: 20px;
 }
 
 .menu2 ul{
@@ -178,10 +181,11 @@ section h2{
 }
 
 .menu2 li{
-  margin: 20px 0;
+  margin: 40px 0;
 }
 
 .menu2 a{
+  background-color: #c3ecd9;
   text-decoration: none;
   font-size: 18px;
   color: #22744C;
@@ -198,6 +202,7 @@ section h2{
   border-radius: 50px;
   padding: 20px;
 }
+
 .manuales a{
   display: block;      
   text-align: center; 
@@ -215,6 +220,7 @@ footer{
   padding: 20px;
   border-top: 1px solid #22744C;
 }
+
 
 footer h3, footer h4 {
   margin: 10px;
@@ -348,6 +354,7 @@ footer h3, footer h4 {
 
 @media (min-width:1200px){
 
+
 /*### CABECERA SUPERIOR ###*/
 .cabecera-superior{
   padding: 20px 40px;
@@ -394,18 +401,22 @@ nav ul{
 /*## CONTENIDO PRINCIPAL ##*/
 main{
   flex-direction: row;
-  align-items: flex-start;
-  gap: 20px;
+  align-items: stretch;
+  gap:0;
+  padding: 0;
+  
 }
 
 section{
+  padding:30px;
   flex: 3;
 }
 
 .menu2{
-  display: flex;   
-  border-radius: 20%;
-  padding:70px;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-bottom: 0;
 }
 
 .menu2 a{
