--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
     padding: 0;
     box-sizing: border-box;    
     color:#22744C; 
-    font-family: Lilita One;    
+    font-family: Lilita One;        
 }
 
 img:not([alt]) {
@@ -215,10 +215,33 @@ section h2{
 /*## FOOTER ##*/
 
 footer{
+  display:flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
   background-color: #f5f5f5;
   text-align: center;
   padding: 20px;
   border-top: 1px solid #22744C;
+}
+
+.ubicacion {
+  width: 100%;
+}
+
+.map-responsive{
+  position: relative;
+  width: 100%;
+  padding-bottom: 70%;
+  height: 0;  
+}
+
+.map-responsive iframe{
+  position: absolute;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  border:0;
 }
 
 
@@ -426,6 +449,17 @@ section{
 /*## FOOTER ##*/
 footer{
   padding: 40px;
+}
+
+.map-responsive {
+  max-width: 600px;
+  padding-bottom: 40%;
+  margin: 0 auto;
+}
+
+
+.ubicacion h3, h4{
+  font-size:30px;
 }
 
 .pie-redes img{
