--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,6 +139,7 @@ main .tituloventajas{
 
 .caja p{
   margin-bottom: 20px;
+  color:black;
 }
 
 .caja .btn{
@@ -208,7 +209,7 @@ section h2{
   text-align: center; 
   margin: 20px 0;     
   text-decoration: none;
-  color:yellow;
+  color:rgb(0, 0, 0);
   text-shadow:0px 0px 8px #103523;
 }
 
